Add version number to Arrange, remove extra file

--- a/css/arrange.css
+++ b/css/arrange.css
@@ -1,5 +1,5 @@
 /**
- * Arrange
+ * Arrange, v1.2
  * A very basic grid system, a bit like Skeleton
  *
  * Copyright (c) 2013, Fred LeBlanc
@@ -387,6 +387,8 @@ br.clear {
 	margin-left: 95.3333% !important;
 }
 
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
 
 /**
