--- a/css/sample.css
+++ b/css/sample.css
@@ -67,13 +67,13 @@ div.row > div {
 	border-radius: 4px;
 }
 
-div.gutterless > div {
+div.collapsed > div {
 	-webkit-border-radius: 0px;
 	-moz-border-radius: 0px;
 	border-radius: 0px;
 }
 
-div.row.gutterless > div:first-child {
+div.row.collapsed > div:first-child {
 	-webkit-border-top-left-radius: 4px;
 	-webkit-border-bottom-left-radius: 4px;
 	-moz-border-radius-topleft: 4px;
@@ -82,7 +82,7 @@ div.row.gutterless > div:first-child {
 	border-bottom-left-radius: 4px;
 }
 
-div.row.gutterless > div:last-child {
+div.row.collapsed > div:last-child {
 	-webkit-border-top-right-radius: 4px;
 	-webkit-border-bottom-right-radius: 4px;
 	-moz-border-radius-topright: 4px;
